Cors e configuração para deploy em produção

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# alteração da porta padrão
+server.port=8180
+
 # configuração necessária para a API de upload de arquivos
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=3MB
