--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>gs-img</name>
 	<description>Microserviço para uploads de imagens</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -57,6 +57,8 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<source>1.8</source>
+        			<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
