--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<name>gs-img</name>
 	<description>Microserviço para uploads de imagens</description>
 	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+ 		<maven.compiler.target>1.8</maven.compiler.target>
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
@@ -57,8 +59,6 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
-					<source>1.8</source>
-        			<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
